       - rename these files to MBSEQ_B1.V4 to MBSEQ_B4.V4
       - don't copy MBSEQ_HW.V4 (always read from root directory)
       - remove the copied *.V4 files from root directory, or move
         them to another directory for backup
       - unmount the SD Card on your computer
       - wait until MSD mode is disabled!
       - press EXIT, thereafter OPEN the session by pressing GP button 9


MIDIboxSEQ V4.0beta16
~~~~~~~~~~~~~~~~~~~~~

  o MIDI->Section Control: Octaves which are not taken for section selection
    can now be optionally forwarded to a configurable MIDI port.
    This saves you from adding a keyboard splitter to your MIDI keyboard, if
    you want to play a MIDI instrument from an unused keyboard zone.

  o fixed bug in live recording function (notelength sometimes not recorded correctly)

  o MIOS terminal functions have been added. Just enter "help" in the terminal
    which has been integrated into MIOS Studio 2

  o copy function now works correctly together with the section concept

  o Follow function now available as dedicated button and with key combination MENU+EXIT

  o the Follow Song option under UTILITY->Options has been removed. The selected
    follow mode won't be stored on SD Card anymore. Follow is deactivated after
    power-on and has to be manually enabled (e.g. by pressing MENU+EXIT)


MIDIboxSEQ V4.0beta15
~~~~~~~~~~~~~~~~~~~~~

  o Track sections which should be played can now be selected via MIDI
    Keyboard as demonstrated in http://www.youtube.com/watch?v=U_RQL24j8no

    Each group (G1/2/3/4) has a separate selection zone on the keyboard.
    Key C..B select section 1..12, the first key of the octave (C) plays
    the first section as usual, it has the same effect as if this feature
    is disabled.

    The width of a section depends on the track length.

    E.g., if the track length is set to 32, and if it consists of 256 steps,
    8 sections are available which can be selected with Key C/C#/D/D#/E/F#/F/F#/G

